$Id: ChangeLog,v 1.508 2009/01/15 13:43:41 olereinhardt Exp $

2009-01-15  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* arch/arm/dev/at91_spi.c:
	  Fixed return values of At91SpiReset
	  Fixed calculation of return values in At91SpiGetSckDelay,
	  At91SpiGetTxDelay, At91SpiGetCsDelay


2009-01-14  Harald Kipp  <harald.kipp@egnite.de>

	* tools/nutconf/nutconf.cpp: Applied the patch contributed by
	Joerg Hermann. This finally seems to fix the seg fault crash
	on KDE4 and Gnome 2.24.

	* tools/nutconf/nutconfdoc.cpp: Removed the destructor of
	CAbstractDirCopyTraverser. It's not really required, but
	results in a compile error with the newer GNU compiler,
	which doesn't accept a pure-specifier with a function body.


2009-01-13  Ole Reinhardt <ole.reinhardt@thermotemp.de>
          
        * tools/nutconf/nutconfdoc.cpp: Commented out inline destructor of
          CAbstractDirCopyTraverser to fix compilation bug on linux


2009-01-10  Harald Kipp  <harald.kipp@egnite.de>

	* tools/nutdisc/mainframe.cpp, tools/nutdisc/propdialog.cpp:
	Allow unicode build.

	* tools/linux/Makefile.am: Remove Makefile.in on maintainer-clean.


2009-01-09  Harald Kipp  <harald.kipp@egnite.de>

	* tools/nutconf/nutcomponent.c, tools/nutconf/nutconf.h:
	Version 2.0.7. Re-introduced support for Lua 5.0.

	* doc/gen/nut_en.cfg.in: Upgraded to Doxygen 1.5.8.

	* app/Makefile: Temporarily removed C++ sample due to problems
	with GCC 4.3.

	* configure.ac, os/version.c: Next beta will be 4.7.5.

	* conf/arch/arm.nut, conf/arch/avr.nut, conf/eir10c.conf,
	conf/ethernut21b.conf, dev/spibus.c, include/dev/board.h,
	include/sys/device.h, arch/arm/dev/spibus0at91.c,
	arch/arm/dev/spibus1at91.c, arch/arm/dev/spibus_at91.c,
	arch/avr/dev/spibus0avr.c, arch/avr/dev/spibus_avr.c,
	include/cfg/spi.h, include/dev/spibus.h,
	include/dev/spibus_at91.h, include/dev/spibus_avr.h:
	Added SPI bus controller for AVR and AT91.

	* conf/dev/dev.nut, dev/blockdev.c, dev/nvmem_at45d.c,